tests/data/model/invalid/missing_nr_sv.libsvm.model
svm_type c_svc
kernel_type linear
nr_class 2
label 0 1
total_sv 6
rho 0.32260160011873423
SV
-1.8568721894e-01 1:-1.1178275006e+00 2:-2.9087188881e+00 3:6.6638344270e-01 4:1.0978832704e+00
9.0116552290e-01 1:-5.2821182989e-01 2:-3.3588098497e-01 3:5.1687296030e-01 4:5.4604461446e-01
-2.2483112395e-01 1:5.7650218263e-01 2:1.0140559662e+00 3:1.3009428080e-01 4:7.2619138869e-01
1.4909749921e-02 1:1.8849404372e+00 2:1.0051856432e+00 3:2.9849993305e-01 4:1.6464627049e+00
-4.5666857706e-01 1:-2.0981208921e-01 2:6.0276937379e-01 3:-1.3086851759e-01 4:1.0805254527e-01
-4.8888352876e-02 1:-1.1256816276e+00 2:2.1254153434e+00 3:-1.6512657655e-01 4:2.5164553141e+00
